--- a/Proyectos/wyndham.html
+++ b/Proyectos/wyndham.html
@@ -102,7 +102,7 @@
             <!-- =============== 02 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
-                    <img src="../Proyectos/wyndham/LAMINA 4 - NOCHE.jpg" alt="Hotel Wyndham" width="100%" height="100%">
+                    <img src="../Proyectos/wyndham/LAMINA 4 - NOCHE.jpg" alt="Hotel Wyndham" width="100%" height="200px">
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
              <!-- =============== 03 -->
             <div class="col-12 col-lg-4 my-3 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
-                    <img src="../Proyectos/wyndham/LAMINA 5 - PUENTE.jpg" alt="Hotel Wyndham" width="100%" height="100%">
+                    <img src="../Proyectos/wyndham/LAMINA 5 - PUENTE.jpg" alt="Hotel Wyndham" width="100%" height="200px">
                 </div>
             </div>
 
@@ -144,7 +144,7 @@
             <!-- ================ 04 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
-                    <img src="../Proyectos/wyndham/LAMINA 6 ALTERNATIVA - BAR SIN GENTE.jpg" alt="Hotel Wyndham" width="100%" height="100%">
+                    <img src="../Proyectos/wyndham/LAMINA 6 ALTERNATIVA - BAR SIN GENTE.jpg" alt="Hotel Wyndham" width="100%" height="200px">
                 </div>
             </div>
 
@@ -165,7 +165,7 @@
             <!-- ================ 05 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
-                    <img src="../Proyectos/wyndham/lamina1.jpg" alt="Hotel Wyndham" width="100%" height="100%">
+                    <img src="../Proyectos/wyndham/lamina1.jpg" alt="Hotel Wyndham" width="100%" height="200px">
                 </div>
             </div>
             <!-- Modal 05-->
@@ -185,7 +185,7 @@
             <!-- ================ 06 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
-                    <img src="../Proyectos/wyndham/lamina2.jpg" alt="Hotel Wyndham" width="100%" height="100%">
+                    <img src="../Proyectos/wyndham/lamina2.jpg" alt="Hotel Wyndham" width="100%" height="200px">
                 </div>
             </div> 
             <!-- Modal 06-->
