--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -88,9 +88,9 @@
         <div class="row my-5 gallery">
 
              <!-- ============== 01 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
-                    <img src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 01-->
@@ -108,9 +108,9 @@
             </div>
            
             <!-- =============== 02 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
-                    <img src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
 
@@ -129,9 +129,9 @@
             </div>
 
              <!-- =============== 03 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery"> 
+            <div class="col-12 col-lg-4 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
-                    <img src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
 
@@ -150,9 +150,9 @@
             </div>
 
             <!-- ================ 04 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
-                    <img src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
 
@@ -171,9 +171,9 @@
             </div>
 
             <!-- ================ 05 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
-                    <img src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 05-->
@@ -191,9 +191,9 @@
             </div>
 
             <!-- ================ 06 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
-                    <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 06-->
@@ -211,9 +211,9 @@
             </div>
 
             <!-- ================= 07 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 07 Plano-->
@@ -231,9 +231,9 @@
             </div>
 
              <!-- ================= 08 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 08 Plano-->
@@ -251,9 +251,9 @@
             </div>
 
              <!-- ================= 09 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 09 Plano-->
@@ -271,9 +271,9 @@
             </div>
 
             <!-- ================= 10 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 10 Plano-->
@@ -291,9 +291,9 @@
             </div>
 
             <!-- ================= 11 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 11 Plano-->
@@ -311,9 +311,9 @@
             </div>
 
             <!-- ================= 12 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina06" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 12 Plano-->
@@ -331,9 +331,9 @@
             </div>
 
              <!-- ================= 13 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
-                    <img src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 13 Plano-->
@@ -351,9 +351,9 @@
             </div>
 
               <!-- ================= 14 Plano -->
-              <div class="col-12 col-lg-4 my-3 col_gallery">
+              <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 14 Plano-->
