--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -90,9 +90,9 @@
         <div class="row my-5 gallery">
 
              <!-- ============== 01 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
-                    <img src="../Proyectos/viviendaMM/02.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/02.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 01-->
@@ -110,9 +110,9 @@
             </div>
            
             <!-- =============== 02 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
-                    <img src="../Proyectos/viviendaMM/03.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/03.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div>
 
@@ -131,9 +131,9 @@
             </div>
 
              <!-- =============== 03 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery"> 
+            <div class="col-12 col-lg-4 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
-                    <img src="../Proyectos/viviendaMM/04.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/04.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div>
 
@@ -152,9 +152,9 @@
             </div>
 
             <!-- ================ 04 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
-                    <img src="../Proyectos/viviendaMM/05.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/05.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div>
 
@@ -173,9 +173,9 @@
             </div>
 
             <!-- ================ 05 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
-                    <img src="../Proyectos/viviendaMM/lamina1.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/lamina1.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 05-->
@@ -193,9 +193,9 @@
             </div>
 
             <!-- ================ 06 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
-                    <img src="../Proyectos/viviendaMM/lamina2.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/lamina2.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 06-->
@@ -213,9 +213,9 @@
             </div>
 
             <!-- ================= 07 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
-                    <img src="../Proyectos/viviendaMM/lamina3.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/lamina3.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 07 Plano-->
@@ -233,9 +233,9 @@
             </div>
 
              <!-- ================= 08 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
-                    <img src="../Proyectos/viviendaMM/lamina4.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/lamina4.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 08 Plano-->
@@ -253,9 +253,9 @@
             </div>
 
              <!-- ================= 09 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
-                    <img src="../Proyectos/viviendaMM/lamina5.jpg" alt="Vivienda MM" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaMM/lamina5.jpg" alt="Vivienda MM" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 09 Plano-->
