--- a/Proyectos/viviendaSG.html
+++ b/Proyectos/viviendaSG.html
@@ -90,9 +90,9 @@
         <div class="row my-5 gallery">
 
              <!-- ============== 01 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
-                    <img src="../Proyectos/viviendaSG/image001.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image001.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 01-->
@@ -110,9 +110,9 @@
             </div>
            
             <!-- =============== 02 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
-                    <img src="../Proyectos/viviendaSG/image004.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image004.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div>
 
@@ -131,9 +131,9 @@
             </div>
 
              <!-- =============== 03 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery"> 
+            <div class="col-12 col-lg-4 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
-                    <img src="../Proyectos/viviendaSG/image005.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image005.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div>
 
@@ -152,9 +152,9 @@
             </div>
 
             <!-- ================ 04 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
-                    <img src="../Proyectos/viviendaSG/image006c.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image006c.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div>
 
@@ -173,9 +173,9 @@
             </div>
 
             <!-- ================ 05 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
-                    <img src="../Proyectos/viviendaSG/image007.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image007.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div>
             <!-- Modal 05-->
@@ -193,9 +193,9 @@
             </div>
 
             <!-- ================ 06 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
-                    <img src="../Proyectos/viviendaSG/image008.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image008.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 06-->
@@ -213,9 +213,9 @@
             </div>
 
             <!-- ================= 07 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
-                    <img src="../Proyectos/viviendaSG/image009.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image009.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 07 Plano-->
@@ -233,9 +233,9 @@
             </div>
 
              <!-- ================= 08 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
-                    <img src="../Proyectos/viviendaSG/image010.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image010.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 08 Plano-->
@@ -253,9 +253,9 @@
             </div>
 
              <!-- ================= 09 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
-                    <img src="../Proyectos//viviendaSG/image012.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos//viviendaSG/image012.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 09 Plano-->
@@ -273,9 +273,9 @@
             </div>
 
             <!-- ================= 10 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
-                    <img src="../Proyectos/viviendaSG/image014.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image014.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 10 Plano-->
@@ -293,9 +293,9 @@
             </div>
 
             <!-- ================= 11 Plano -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
-                    <img src="../Proyectos/viviendaSG/image015.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image015.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 11 Plano-->
@@ -313,9 +313,9 @@
             </div>
 
              <!-- ================= 13 Plano -->
-             <div class="col-12 col-lg-4 my-3 col_gallery">
+             <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
-                    <img src="../Proyectos/viviendaSG/image017.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image017.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 13 Plano-->
@@ -333,9 +333,9 @@
             </div>
 
               <!-- ================= 14 Plano -->
-              <div class="col-12 col-lg-4 my-3 col_gallery">
+              <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/image018.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image018.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 14 Plano-->
@@ -353,9 +353,9 @@
             </div>
 
             <!-- ================= 15 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/image019c.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image019c.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 15-->
@@ -373,9 +373,9 @@
             </div>
 
             <!-- ================= 16 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/image020.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image020.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 16-->
@@ -393,9 +393,9 @@
             </div>
 
             <!-- ================= 17 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/image021.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image021.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 17-->
@@ -413,9 +413,9 @@
             </div>
 
             <!-- ================= 18 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/image022.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/image022.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 18-->
@@ -433,9 +433,9 @@
             </div>
 
             <!-- ================= 19 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina2.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina2.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 19-->
@@ -453,9 +453,9 @@
             </div>
 
             <!-- ================= 20 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina3.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina3.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 20-->
@@ -473,9 +473,9 @@
             </div>
 
             <!-- ================= 21 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina4.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina4.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 21-->
@@ -493,9 +493,9 @@
             </div>
 
             <!-- ================= 22 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina5.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina5.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 22-->
@@ -513,9 +513,9 @@
             </div>
 
             <!-- ================= 23 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina6.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina6.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 23-->
@@ -533,9 +533,9 @@
             </div>
 
             <!-- ================= 24 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina7.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina7.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 24-->
@@ -553,9 +553,9 @@
             </div>
 
             <!-- ================= 25 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina8.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina8.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 25-->
@@ -573,9 +573,9 @@
             </div>
 
             <!-- ================= 25 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina9.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina9.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 25-->
@@ -593,9 +593,9 @@
             </div>
 
             <!-- ================= 26 -->
-            <div class="col-12 col-lg-4 my-3 col_gallery">
+            <div class="col-12 col-lg-4 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
-                    <img src="../Proyectos/viviendaSG/lamina10.jpg" alt="Vivienda SG" width="100%" height="100%">
+                    <img class="img_gallery" src="../Proyectos/viviendaSG/lamina10.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 26-->
